Port to Java 1.4: API compatibility and Swing fixes for IRIX/Win98
- Replace Java 5 autoboxing APIs (Integer.valueOf, Long.valueOf, Double.valueOf)
  with explicit constructors (new Integer, new Long, new Double)
- Replace String.contains() with String.indexOf() >= 0
- Replace String.replace(CharSequence,CharSequence) with replaceAll()
- Replace Collections.addAll() with Arrays.asList()
- Replace PrintStream(String) constructor with PrintStream(FileOutputStream)
- Replace System.nanoTime() with System.currentTimeMillis()
- Fix JFrame/JDialog setLayout() and add() calls to use getContentPane()
  in all direct and indirect subclasses (Java 1.4 throws Error otherwise)
- Add products/run98.bat launcher for Windows 98 / Java 1.4.2

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>