@@ -121,7 +121,7 @@ public class StringUtilities {
 	public static String intArrayToString(int[] array,String delim) {
 		ArrayList list = new ArrayList();
 		for (int i=0;i<array.length;i++) {
-			list.add(Integer.valueOf(array[i]));
+			list.add(new Integer(array[i]));
 		}
 		return collectionToString(list,delim);
 	}
