@@ -41,7 +41,7 @@ public class QuestRequirementLocationExists extends QuestRequirement {
 	public QuestLocation getQuestLocation() {
 		String id = getString(LOCATION);
 		if (id!=null) {
-			GameObject go = getGameData().getGameObject(Long.valueOf(id));
+			GameObject go = getGameData().getGameObject(new Long(id));
 			if (go!=null) {
 				return new QuestLocation(go);
 			}
