@@ -190,7 +190,7 @@ public class QuestRequirementSearchResult extends QuestRequirement {
 	public QuestLocation getQuestLocation() {
 		String id = getString(LOCATION);
 		if (id!=null) {
-			GameObject go = getGameData().getGameObject(Long.valueOf(id));
+			GameObject go = getGameData().getGameObject(new Long(id));
 			if (go!=null) {
 				return new QuestLocation(go);
 			}
@@ -201,7 +201,7 @@ public class QuestRequirementSearchResult extends QuestRequirement {
 	public QuestLocation getTargetLocation() {
 		String id = getString(TARGET_LOC);
 		if (id!=null) {
-			GameObject go = getGameData().getGameObject(Long.valueOf(id));
+			GameObject go = getGameData().getGameObject(new Long(id));
 			if (go!=null) {
 				return new QuestLocation(go);
 			}
