@@ -84,7 +84,7 @@ public class QuestRewardExorcise extends QuestReward {
 	public QuestLocation getQuestLocation() {
 		String id = getString(LOCATION);
 		if (id!=null) {
-			GameObject go = getGameData().getGameObject(Long.valueOf(id));
+			GameObject go = getGameData().getGameObject(new Long(id));
 			if (go!=null) {
 				return new QuestLocation(go);
 			}
